--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>百年前新聞</title>
+    <title>百年前新聞オンライン</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#333333">
     <link rel="apple-touch-icon" href="icon.png">
 </head>
 <body>
-    <h1>百年前新聞へようこそ</h1>
-    <p>ここにGASの内容が表示されます。</p>
+    <h1>百年前新聞オンライン</h1>
+    <p>ここにGoogle Apps Scriptの内容が表示されます。</p>
     <script src="script.js"></script>
 </body>
 </html>
