--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="apple-touch-icon" href="icon.png">
 </head>
 <body>
-    <h1>百年前新聞オンライン</h1>
-    <p>ここにGoogle Apps Scriptの内容が表示されます。</p>
-    <script src="script.js"></script>
+  <h1>百年前新聞オンライン</h1>
+  <div id="articles">
+    <!-- 記事がここに表示される -->
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
