--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <base target="_top">
+  <title>百年前新聞オンライン</title>
   <!-- iOS用: ホーム画面追加に必要 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
