--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="百年前新聞">
-  <link rel="apple-touch-icon" href="https://pbs.twimg.com/profile_images/875699823361445888/yAH4daId_400x400.jpg">
+  <link rel="apple-touch-icon" href="https://drive.google.com/uc?id=1i0w1VUjsXzLkWHuR3adVxDxZIIw8cCH2&.png">
+  <link rel="icon" href="https://drive.google.com/uc?id=1i0w1VUjsXzLkWHuR3adVxDxZIIw8cCH2&.png" type="image/png">
 
   <!-- 通常のPWA向け -->
   <link rel="manifest" href="/manifest.json">
