--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <base target="_top">
   <title>百年前新聞オンライン</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/icon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
+
   <!-- iOS用: ホーム画面追加に必要 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="百年前新聞">
   <link rel="apple-touch-icon" href="/icon.png">
-  <link rel="icon" href="/icon.png" type="image/png">
 
   <!-- 通常のPWA向け -->
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#333333">
-
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
