--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     </div>
   </div>
 
+  <button id="scrollToTop" style="position: fixed; bottom: 20px; right: 20px; display: none;">⬆️</button>
+
   <!-- モーダル -->
   <div id="imageModal" class="modal hidden">
     <button id="closeBtn" class="close-btn">&times;</button>
