--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     </div>
   </div>
 
-  <button id="scrollToTop" style="position: fixed; bottom: 20px; right: 20px; display: none;">⬆️</button>
-
+  <button id="scrollToTop" style="position: fixed; bottom: 20px; right: 20px; display: none; z-index: 999;">⬆️</button>
   <!-- モーダル -->
   <div id="imageModal" class="modal hidden">
     <button id="closeBtn" class="close-btn">&times;</button>
