--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <body>
 
   <!-- 簡易ポップアップ -->
-  <div id="ios-tip" style="display:none; position:fixed; bottom:20px; left:0; right:0; padding:10px; background:#fff; text-align:center; box-shadow:0 0 5px #000;">
-    ホーム画面に追加するには、Safariで「共有ボタン → ホーム画面に追加」を選んでね！
-  </div>
+  <div id="ios-tip">ホーム画面に追加するには、Safariで「共有ボタン → ホーム画面に追加」を選んでね！</div>
+  <div id="updateNotice">🔄 新しいバージョンがあります。タップで更新</div>
 
   <div id="search-box" style="margin-bottom: 10px;">
     <input type="text" id="searchInput" placeholder="キーワードで検索" oninput="applyFilters()" />
