--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
   </div>
   <div id="tag-filter">
     <span>タグで絞り込み:</span>
+    <div id="tag-actions">
+      <button id="toggle-tags">▼ もっと見る</button>
+      <button id="clear-tags">タグをクリア</button>
+    </div>
     <div id="tag-buttons"></div>
-    <button id="clear-tags">タグをクリア</button>
   </div>
   <div id="sortBox" style="margin-bottom: 20px;">
     <label for="sortSelect">並べ替え：</label>
