--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="search-box" style="margin-bottom: 10px;">
     <input type="text" id="searchInput" placeholder="キーワードで検索" oninput="applyFilters()" />
   </div>
-  <div id="filters" style="margin-bottom: 20px;">
+  <div id="genres" style="margin-bottom: 20px;">
     <button onclick="setGenre('すべて')">すべて</button>
   </div>
   <div id="tag-filter">
