--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
   <div id="ios-tip">ホーム画面に追加するには、Safariで「共有ボタン → ホーム画面に追加」を選んでね！</div>
   <div id="updateNotice">🔄 新しいバージョンがあります。タップで更新</div>
 
-  <div id="search-box" style="margin-bottom: 10px; display: flex; align-items: center; gap: 8px;">
-    <input type="text" id="searchInput" placeholder="キーワードで検索" oninput="applyFilters()" />
+  <div id="search-box" style="margin-bottom: 16px; display: flex; align-items: center; gap: 8px; flex-wrap: wrap;">
+    <div class="search-wrapper">
+      <span class="search-icon">🔍</span>
+      <input type="text" id="searchInput" placeholder="キーワードで検索" oninput="applyFilters()" />
+    </div>
     <select id="sortSelect" onchange="applyFilters()">
       <option value="relevance">適合度順</option>
       <option value="dateDesc">新しい順</option>
