--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <base target="_top">
+  <meta charset="UTF-8" />
   <title>百年前新聞オンライン</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="/icon.png" type="image/png">
-  <link rel="stylesheet" href="style.css">
 
   <!-- iOS用: ホーム画面追加に必要 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -17,13 +17,18 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#333333">
 </head>
-
 <body>
 
   <!-- 簡易ポップアップ -->
   <div id="ios-tip">ホーム画面に追加するには、Safariで「共有ボタン → ホーム画面に追加」を選んでね！</div>
   <div id="updateNotice">🔄 新しいバージョンがあります。タップで更新</div>
 
+  <!-- ジャンル（上部タブ） -->
+  <div id="genres">
+    <button onclick="setGenre('すべて')" class="active">すべて</button>
+  </div>
+
+  <!-- 検索 + ソート -->
   <div id="search-box">
     <input type="text" id="searchInput" placeholder="キーワードで検索" oninput="applyFilters()" />
     <select id="sortSelect" onchange="applyFilters()">
@@ -32,43 +37,38 @@
       <option value="dateAsc">古い順</option>
     </select>
   </div>
-  <div id="genres">
-    <button onclick="setGenre('すべて')">すべて</button>
-  </div>
-  <div id="tag-filter">
-    <span>タグで絞り込み:</span>
-    <div id="tag-actions">
-      <button id="toggle-tags">▼ もっと見る</button>
-      <button id="clear-tags">タグをクリア</button>
-    </div>
-    <div id="tag-buttons"></div>
-  </div>
-  <div id="tab-buttons">
-    <button onclick="switchTab('articles')">📰 記事</button>
-    <button onclick="switchTab('thumbnails')">🖼️ 画像</button>
-  </div>
 
-
-  <div id="mainContent">
-    <div id="noResults" class="no-results-message hidden">
-      該当する記事がありません。
+  <!-- コンテンツ全体を左右分割 -->
+  <div id="main-layout">
+    <!-- 左カラム：記事 -->
+    <div id="left-column">
+      <div id="noResults" class="no-results-message hidden">該当する記事がありません。</div>
+      <div id="news">読み込み中...</div>
     </div>
-    <div id="news" class="tab-content">読み込み中...</div>
-    <h2>🖼️ サムネイル一覧</h2>
-    <div id="thumbnailGallery" class="tab-content">
-      <!-- ここに画像を追加 -->
+
+    <!-- 右カラム：タグとサムネイル -->
+    <div id="right-column">
+      <div id="tag-filter">
+        <span>タグで絞り込み:</span>
+        <div id="tag-actions">
+          <button id="toggle-tags">▼ もっと見る</button>
+          <button id="clear-tags">タグをクリア</button>
+        </div>
+        <div id="tag-buttons"></div>
+      </div>
+      <div id="thumbnailGallery"></div>
     </div>
   </div>
 
+  <!-- トップへ戻るボタン -->
   <button id="scrollToTop">⬆️</button>
-  <!-- モーダル -->
+
+  <!-- モーダル（画像） -->
   <div id="imageModal" class="modal hidden">
     <button id="closeBtn" class="close-btn">&times;</button>
     <img id="modalImg" src="" loading="lazy" />
-
   </div>
 
   <script src="script.js"></script>
-
 </body>
 </html>
