--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <base target="_top">
+  <title>百年前新聞オンライン</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/icon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
+
+  <!-- iOS用: ホーム画面追加に必要 -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="百年前新聞">
+  <link rel="apple-touch-icon" href="/icon.png">
+
+  <!-- 通常のPWA向け -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#333333">
+</head>
+
 <body>
   <!-- iOS案内と更新通知 -->
   <div id="ios-tip">ホーム画面に追加するには、Safariで「共有ボタン → ホーム画面に追加」を選んでね！</div>
