--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
       </div>
 
       <div id="tab-buttons">
-        <button onclick="switchTab('articles')">📰 記事</button>
-        <button onclick="switchTab('thumbnails')">🖼️ 画像</button>
+        <button onclick="switchTab('articles')" class="articles-btn">📰 記事</button>
+        <button onclick="switchTab('tags')" class="tags-btn">🏷️ タグ一覧</button>
+        <button onclick="switchTab('thumbnails')" class="thumbnails-btn">🖼️ サムネイル一覧</button>
       </div>
 
       <div id="noResults" class="no-results-message hidden">該当する記事がありません。</div>
